Important Changes in:
 CAbstractDBEngine

   * Changes method for better support for SGBD

 CAbstractReponseFormat
 
   * Better support for Logging and DateTime, Date, Time Format